--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "^5.59.13",
+    "@tanstack/react-query-devtools": "^5.59.13",
+    "@types/lodash": "^4.17.10",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "input-otp": "^1.2.4",
+    "loadash": "^1.0.0",
     "lucide-react": "^0.451.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
