--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "clsx": "^2.1.1",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.451.0",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.13.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
